# qopyapp

./: .gitignore  Cargo.toml  Makefile  ReadMe.md  build_android.sh  build_library.sh  generate_bridge.sh  qopy.sh  run.sh  setup_permissions.sh  test_discovery.sh  test_setup.sh  test_ws_client.html
.cargo/: config.toml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/qopy/p2p_transfer/: MainActivity.kt
app/ios/Runner/: Info.plist
app/lib/: main.dart
app/lib/bridge/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/models/: peer.dart
app/lib/screens/: home_screen.dart  transfer_screen.dart
app/lib/services/: bridge_manager.dart  peer_service.dart  transfer_service.dart  websocket_discovery.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  INSTALLATION.md  README.md
examples/: basic_usage.rs  network_monitoring.rs
p2p-core/: Cargo.toml
p2p-core/src/: api.rs  bridge_generated.rs  error.rs  lib.rs  main.rs  peer_discovery.rs
signaling-server/: go.mod  main.go
